feat(contact): Update contact form with new style and UX.

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -4,6 +4,9 @@ $cl-tertiary: #0076FF;
 $cl-quaternary: #EA4DB2;
 $cl-quinary: #2D247F;
 
+$cl-positive: #19ad5c;
+$cl-negative: #c62d4f;
+
 $cl-body: #444444;
 $cl-warning: #FB7676;
 
