feat(banner): Add static animations and blobs.
feat(home): Add breakpoints to sections, headings, header, banner, etc.

--- a/src/scss/base/_animations.scss
+++ b/src/scss/base/_animations.scss
@@ -51,3 +51,12 @@
     transform: scale(1);
   }
 }
+
+@keyframes float {
+
+  from {
+    transform: translate3d(0, 0, 0);
+  } to {
+    transform: translate3d(0, -1rem, 0);
+  }
+}
