--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -3,19 +3,28 @@
   position: relative;
   display: flex;
   align-items: center;
-  height: 95vh;
-  min-height: 80rem;
+  height: 70vh;
+  min-height: 70rem;
   color: $cl-white;
   background-image: linear-gradient(168deg, #4735E2 40%, #3D3398 100%);
 
-  &:before {
+  @include media($screen-sm) {
+    height: 95vh;
+    min-height: 80rem;
+  }
+
+  &:before,
+  &:after {
     content: '';
-    z-index: 2;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+  }
+
+  &:before {
+    z-index: 2;
     background: {
       repeat: no-repeat;
       size: auto 100%;
@@ -25,20 +34,14 @@
   }
 
   &:after {
-    content: '';
     z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
     opacity: 0;
     display: block;
-    width: 100%;
-    height: 100%;
     background: {
       repeat: no-repeat;
       size: cover;
       position: top center;
-      image: url('images/banner-top.svg');
+      image: url('images/banner.svg');
     };
     transition: opacity 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
   }
@@ -51,17 +54,71 @@
   }
 }
 
+.banner__blob {
+  opacity: 0;
+  position: absolute;
+  transition: {
+    property: opacity, transform;
+    duration: 800ms;
+    timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  .banner.is-active & {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.banner__blob--1 {
+  top: 60%;
+  right: 5%;
+  width: 20.6rem;
+  height: 26.9rem;
+  background: {
+    image: url('images/blob-1.svg');
+    repeat: no-repeat;
+    size: 100%;
+  }
+  transform: translate3d(0, 10rem, 0);
+  transition-delay: 200ms;
+  animation: float 1600ms alternate infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
+
+  @include media($screen-sm) {
+    top: 50%;
+    right: 22%;
+  }
+}
+
+.banner__blob--2 {
+  top: 75%;
+  left: 20%;
+  width: 8.5rem;
+  height: 8.7rem;
+  background: {
+    image: url('images/blob-2.svg');
+    repeat: no-repeat;
+    size: 100%;
+  }
+  transform: translate3d(0, 5rem, 0);
+  transition-delay: 500ms;
+  animation: float 1200ms alternate infinite 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+
+  @include media($screen-sm) {
+    top: 75%;
+    left: 20%;
+  }
+}
+
 .banner__container {
   z-index: 3;
   position: relative;
   width: 100%;
   margin: 0 auto;
-  padding: 0 3rem;
-  text-align: center;
+  padding: 0 2rem;
 
-  @include media($screen-md) {
+  @include media($screen-sm) {
     max-width: $container-max-width;
-    text-align: left;
+    padding: 0 3rem;
   }
 }
 
@@ -69,7 +126,7 @@
   opacity: 0;
   transition: opacity 800ms cubic-bezier(0.215, 0.61, 0.355, 1) 300ms;
 
-  @include media($screen-md) {
+  @include media($screen-sm) {
     max-width: 80%;
   }
 
@@ -85,13 +142,10 @@
 
 .banner__content {
   opacity: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   line-height: 1.55;
   transition: opacity 800ms cubic-bezier(0.215, 0.61, 0.355, 1) 600ms;
 
-  @include media($screen-md) {
+  @include media($screen-sm) {
     max-width: 60%;
     align-items: flex-start;
   }
