--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,11 +4,19 @@
   left: 0;
   right: 0;
   top: 0;
-  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
   width: 100%;
-  height: 7rem;
+  height: 6rem;
   font-size: 1.6rem;
   padding: 1rem 0;
+  -webkit-backdrop-filter: blur(1rem);
+  backdrop-filter: blur(1rem);
+
+  @include media($screen-sm) {
+    margin-top: 5rem;
+  }
 
   &::before {
     content: '';
@@ -35,19 +43,34 @@
   }
 
   .social {
-    animation: fadeIn 800ms both 1000ms cubic-bezier(0.215, 0.61, 0.355, 1);
+    display: none;
+
+    @include media($screen-sm) {
+      display: flex;
+      animation: fadeIn 800ms both 1000ms cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
   }
 
   .button {
-    animation: fadeIn 800ms both 1200ms cubic-bezier(0.215, 0.61, 0.355, 1);
+    display: none;
+
+    @include media($screen-sm) {
+      display: flex;
+      animation: fadeIn 800ms both 1200ms cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
   }
 }
 
 .header__container {
   display: flex;
+  width: 100%;
   max-width: $container-max-width;
-  margin: 0 auto;
-  padding: 0 3rem;
+  padding: 0 2rem;
+
+  @include media($screen-sm) {
+    margin: 0 auto;
+    padding: 0 3rem;
+  }
 }
 
 .header__logo {
