--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -1,21 +1,29 @@
 .members {
+  scroll-snap-type: x mandatory;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   overflow-x: auto;
   max-width: 100%;
   margin: 0;
-  padding: 6rem 0 10rem 0;
+  padding: 6rem 2rem 6rem;
   list-style: none;
+
+  @include media($screen-sm) {
+    align-items: center;
+    justify-content: center;
+    padding: 6rem 0 10rem 0;
+  }
 }
 
 .member {
+  scroll-snap-align: center;
   opacity: 0;
   position: relative;
   overflow: hidden;
   flex-grow: 0;
   flex-shrink: 0;
   width: 33.6rem;
-  margin-right: 3rem;
+  margin: 0 1rem;
   padding: 7em 3em 9em;
   font-size: 1rem;
   list-style: none;
@@ -40,51 +48,49 @@
 
   .members & {
 
-    &:nth-child(1) {
-      margin-left: auto;
-    }
-
-    &:nth-child(5) {
-      margin-right: auto;
-    }
-
     &:nth-child(1),
     &:nth-child(5) {
-      width: 19rem;
-      font-size: .57143rem; // 16px
-      transition-duration: 500ms;
-      transition-delay: 600ms, 600ms, 600ms;
-      transform: scale(0);
 
-      .section.is-active & {
-        transform: scale(1);
-        transition-delay: 600ms, 0ms, 0ms;
+      @include media($screen-sm) {
+        width: 19rem;
+        font-size: .57143rem; // 16px
+        transition-duration: 500ms;
+        transition-delay: 600ms, 600ms, 600ms;
+        transform: scale(0);
 
-        &:hover,
-        &:focus,
-        &:focus-within {
-          z-index: 2;
-          transform: scale(1.765);
+        .section.is-active & {
+          transform: scale(1);
+          transition-delay: 600ms, 0ms, 0ms;
+
+          &:hover,
+          &:focus,
+          &:focus-within {
+            z-index: 2;
+            transform: scale(1.765);
+          }
         }
       }
     }
 
     &:nth-child(2),
     &:nth-child(4) {
-      width: 25.5rem;
-      font-size: .75rem;
-      transition-duration: 500ms;
-      transition-delay: 300ms, 0ms, 0ms;
-      transform: scale(0);
 
-      .section.is-active & {
-        transform: scale(1);
+      @include media($screen-sm) {
+        width: 25.5rem;
+        font-size: .75rem;
+        transition-duration: 500ms;
+        transition-delay: 300ms, 0ms, 0ms;
+        transform: scale(0);
 
-        &:hover,
-        &:focus,
-        &:focus-within {
-          z-index: 2;
-          transform: scale(1.34299);
+        .section.is-active & {
+          transform: scale(1);
+
+          &:hover,
+          &:focus,
+          &:focus-within {
+            z-index: 2;
+            transform: scale(1.34299);
+          }
         }
       }
     }
