--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'base/functions';
 @import 'base/variables';
+@import 'base/mixins';
 @import 'base/defaults';
 @import 'base/typography';
 @import 'base/animations';
