--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -9,7 +9,7 @@ body {
   color: $cl-body;
   font: {
     family: $font-body;
-    size: 1.8rem;
+    size: 1.6rem;
   };
 
   @include media($screen-sm) {
@@ -21,10 +21,12 @@ h1 {
   font-family: $font-primary;
   color: $cl-primary;
   font-size: 4rem;
+  line-height: 1;
   margin: 0 0 2.5rem;
 
   @include media($screen-sm) {
     font-size: 6rem;
+    line-height: 1.2;
   }
 }
 
