--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -26,7 +26,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(168deg, #4735E2 40%, #3D3398 100%);
+    background-color: $cl-primary;
     box-shadow: 0 0.2rem 2rem 0 rgba(0, 0, 0, .2);
     opacity: 0;
     transition: {
@@ -76,6 +76,10 @@
 .header__logo {
   display: flex;
   align-content: center;
-  margin-right: 7rem;
+  margin-right: 3rem;
   animation: fadeIn 800ms both 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+
+  @include media($screen-sm) {
+    margin-right: 7rem;
+  }
 }
