--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,6 +1,10 @@
 .navigation {
   display: flex;
   align-items: center;
+  flex-grow: 0;
+  flex-shrink: 1;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
   margin-left: auto;
 
   @include media($screen-sm) {
@@ -10,9 +14,9 @@
 
 .navigation__list {
   display: flex;
-  list-style: none;
   padding: 0;
   margin: 0;
+  list-style: none;
 }
 
 .navigation__item {
