--- a/src/scss/components/_social.scss
+++ b/src/scss/components/_social.scss
@@ -7,7 +7,12 @@
 }
 
 .social--footer {
-  margin: 0 0 0 4rem;
+  flex-shrink: 0;
+  margin: 0 0 0 auto;
+
+  @include media($screen-sm) {
+    margin: 0 0 0 4rem;
+  }
 }
 
 .social-item {
