--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -53,7 +53,7 @@ a {
     border-radius: .6rem;
     transform: rotate(-10deg);
     transform-origin: left bottom;
-    transition: width 700ms cubic-bezier(0.215, 0.61, 0.355, 1) 300ms;
+    transition: width 700ms cubic-bezier(.215, .61, .355, 1) 300ms;
 
     .section.is-active & {
       width: 100%;
