--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -43,7 +43,7 @@
       position: top center;
       image: url('images/banner.svg');
     };
-    transition: opacity 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
+    transition: opacity 800ms cubic-bezier(.215, .61, .355, 1);
   }
 
   &.is-active {
@@ -60,7 +60,7 @@
   transition: {
     property: opacity, transform;
     duration: 800ms;
-    timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    timing-function: cubic-bezier(.215, .61, .355, 1);
   }
 
   .banner.is-active & {
@@ -81,7 +81,7 @@
   }
   transform: translate3d(0, 10rem, 0);
   transition-delay: 200ms;
-  animation: float 1600ms alternate infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  animation: float 1600ms alternate infinite cubic-bezier(.445, .05, .55, .95);
 
   @include media($screen-sm) {
     top: 50%;
@@ -101,7 +101,7 @@
   }
   transform: translate3d(0, 5rem, 0);
   transition-delay: 500ms;
-  animation: float 1200ms alternate infinite 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  animation: float 1200ms alternate infinite 300ms cubic-bezier(.445, .05, .55, .95);
 
   @include media($screen-sm) {
     top: 75%;
@@ -124,7 +124,7 @@
 
 .banner__heading {
   opacity: 0;
-  transition: opacity 800ms cubic-bezier(0.215, 0.61, 0.355, 1) 300ms;
+  transition: opacity 800ms cubic-bezier(.215, .61, .355, 1) 300ms;
 
   @include media($screen-sm) {
     max-width: 80%;
@@ -143,7 +143,7 @@
 .banner__content {
   opacity: 0;
   line-height: 1.55;
-  transition: opacity 800ms cubic-bezier(0.215, 0.61, 0.355, 1) 600ms;
+  transition: opacity 800ms cubic-bezier(.215, .61, .355, 1) 600ms;
 
   @include media($screen-sm) {
     max-width: 60%;
