--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -18,6 +18,6 @@ $font-body: museo-sans, sans-serif;
 
 $container-max-width: 129rem;
 
-$screen-sm: 76.8rem;
-$screen-md: 99.2rem;
-$screen-lg: 133.6rem;
+$screen-sm: 768px;
+$screen-md: 992px;
+$screen-lg: 1336px;
