fix(app): Fix styling inconsistencies.

--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -206,7 +206,7 @@
 
   .contact-form__step-title:first-child {
     max-width: 34rem;
-    margin-bottom: 0;
+    margin: 0 auto;
   }
 
   .contact-form__step-title {
