--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -196,17 +196,22 @@
 
   .contact-form__step-content {
     align-items: center;
-    padding: 7rem 0 6rem;
+    padding: 0 0 6rem;
     max-width: 100%;
-  }
 
-  .button {
-    font-size: 2rem;
+    @include media($screen-lg) {
+      padding-top: 6rem;
+    }
   }
 
   p {
     max-width: 45rem;
-    text-align: center;
+    margin: 1rem 2rem;
+
+    @include media($screen-sm) {
+      margin: 2rem;
+      text-align: center;
+    }
   }
 }
 
@@ -278,7 +283,12 @@
   }
 
   h3 {
+    max-width: calc(100% - 4rem);
     margin-bottom: 0;
+
+    @include media($screen-sm) {
+      max-width: 100%;
+    }
   }
 }
 
@@ -286,8 +296,12 @@
   margin-top: 0;
 
   &:first-child {
-    max-width: calc(100% - 17rem);
+    max-width: calc(100% - 4rem);
     margin-bottom: 0;
+
+    @include media($screen-sm) {
+      max-width: calc(100% - 17rem);
+    }
   }
 }
 
@@ -417,7 +431,7 @@
 
   [data-step='0'] & {
     width: 0;
-    padding: 4rem 0 2rem 0;
+    padding: 2rem 0 0 0;
   }
 
   @include media($screen-lg) {
@@ -549,6 +563,7 @@
   min-height: 7rem;
 
   &:empty {
+
     &::before {
       content: 'Insert team members here';
       display: flex;
@@ -556,15 +571,20 @@
       justify-content: center;
       height: 6rem;
       border: .1rem dashed lighten($cl-body, 30%);
-      margin: 0 1rem;
+      margin: 0 2rem;
       border-radius: 1.33em * .33;
       color: lighten($cl-body, 30%);
       animation: pulse 200ms;
+
+      @include media($screen-sm) {
+        margin: 0 1rem;
+      }
     }
   }
 }
 
 .team-overview__title {
+
   a {
     color: $cl-primary;
     text-decoration: underline;
