--- a/src/scss/components/_selectionbox.scss
+++ b/src/scss/components/_selectionbox.scss
@@ -3,7 +3,7 @@
   align-items: center;
   flex-direction: column;
   width: calc(100% - 4rem);
-  margin: 0 2rem 3rem;
+  margin: 2rem 2rem 3rem;
   padding: 2rem 2rem;
   border-radius: .8rem;
   color: $cl-white;
@@ -18,10 +18,10 @@
 
   a {
     color: $cl-white;
-    font-size: 2rem;
+    font-size: 1.6rem;
 
     span {
-      font-size: 2.2rem;
+      font-size: 2rem;
       font-weight: 700;
     }
   }
