--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -6,16 +6,19 @@
   top: 0;
   display: flex;
   justify-content: center;
-  margin-top: 2rem;
+  margin-top: 5rem;
   width: 100%;
-  height: 6rem;
   font-size: 1.6rem;
-  padding: 1rem 0;
-  -webkit-backdrop-filter: blur(1rem);
-  backdrop-filter: blur(1rem);
 
   @include media($screen-sm) {
-    margin-top: 5rem;
+    margin-top: 3rem;
+    padding: 1rem 0;
+    -webkit-backdrop-filter: blur(1rem);
+    backdrop-filter: blur(1rem);
+  }
+
+  @include media($screen-md) {
+    height: 6rem;
   }
 
   &::before {
@@ -45,7 +48,7 @@
   .social {
     display: none;
 
-    @include media($screen-sm) {
+    @include media($screen-md) {
       display: flex;
       animation: fadeIn 800ms both 1000ms cubic-bezier(0.215, 0.61, 0.355, 1);
     }
@@ -54,7 +57,7 @@
   .button {
     display: none;
 
-    @include media($screen-sm) {
+    @include media($screen-md) {
       display: flex;
       animation: fadeIn 800ms both 1200ms cubic-bezier(0.215, 0.61, 0.355, 1);
     }
@@ -63,23 +66,33 @@
 
 .header__container {
   display: flex;
+  flex-direction: column;
   width: 100%;
   max-width: $container-max-width;
-  padding: 0 2rem;
 
   @include media($screen-sm) {
+    flex-direction: row;
+    flex-wrap: wrap;
     margin: 0 auto;
     padding: 0 3rem;
+  }
+
+  @include media($screen-md) {
+    flex-wrap: nowrap;
   }
 }
 
 .header__logo {
-  display: flex;
-  align-content: center;
-  margin-right: 3rem;
-  animation: fadeIn 800ms both 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  display: none;
 
   @include media($screen-sm) {
-    margin-right: 7rem;
+    display: flex;
+    align-content: center;
+    margin: 0 2rem 0 0;
+    animation: fadeIn 800ms both 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  @include media($screen-lg) {
+    margin: 0 7rem 0 0;
   }
 }
