--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -224,12 +224,24 @@
   }
 }
 
+.contact-form__step-end-title {
+  text-align: center;
+  font-family: $font-primary;
+  font-size: 5rem;
+
+  + p {
+    margin-top: 0;
+    text-align: center;
+  }
+}
+
 .contact-form {
   width: 100%;
   padding-bottom: 4.4rem;
   transition: padding 200ms;
 
-  [data-step='0'] & {
+  [data-step='0'] &,
+  [data-step='8'] & {
     padding: 0;
   }
 
@@ -287,7 +299,7 @@
   color: darken($cl-primary, 30%);
 
   @include media($screen-lg) {
-    padding: 9rem 6rem 6rem;
+    padding: 5rem 6rem 6rem;
     max-width: 57rem;
   }
 
@@ -434,11 +446,12 @@
   white-space: nowrap;
   overflow: hidden;
   transition: {
-    property: width, padding;
+    property: width, height, padding;
     duration: 400ms;
   };
 
-  [data-step='0'] & {
+  [data-step='0'] &,
+  [data-step='8'] & {
     width: 0;
     padding: 2rem 0 0 0;
   }
@@ -501,7 +514,7 @@
       @include media($screen-lg) {
         top: .4rem;
         left: .5rem;
-        width: .25rem;
+        width: .2rem;
         height: 100%;
         margin: .5rem 1ch 0 0;
       }
@@ -565,6 +578,7 @@
 .team-overview {
   max-width: 45rem;
   width: 100%;
+  margin: 0 auto;
 }
 
 .team-overview__members {
