--- a/src/scss/base/_defaults.scss
+++ b/src/scss/base/_defaults.scss
@@ -4,6 +4,7 @@
 
 body,
 html {
+  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -16,7 +17,13 @@ html {
   }
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 main {
+  flex-grow: 1;
   margin-top: -12rem;
 }
 
@@ -29,4 +36,9 @@ main {
   @include media($screen-sm) {
     display: none;
   }
+}
+
+footer {
+  flex-shrink: 0;
+  margin-top: auto;
 }
