fix(contact): Update contact form styling and update UX for keyboard input.

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -116,3 +116,20 @@
     display: none;
   }
 }
+
+.link-button {
+  display: inline-block;
+  appearance: none;
+  padding: 0;
+  border: 0;
+  font-size: inherit;
+  font-family: inherit;
+  color: $cl-secondary;
+  cursor: pointer;
+
+  &:focus,
+  &:hover {
+    outline: none;
+    text-decoration: underline;
+  }
+}
