--- a/src/scss/components/_faq.scss
+++ b/src/scss/components/_faq.scss
@@ -1,11 +1,128 @@
 .faq {
   display: flex;
+  flex-direction: column;
+
+  @include media($screen-md) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .faq__column {
-  width: 50%;
+  width: 100%;
 
+  @include media($screen-md) {
+    width: 49%;
+  }
 }
 
 .faq__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.faq__item {
+  position: relative;
+  margin-bottom: 2rem;
+}
+
+.faq__content {
+  overflow: hidden;
+  max-height: 0;
+  color: $cl-white;
+  transition: color 400ms, max-height 500ms cubic-bezier(0, 1, 0, 1);
+
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: $cl-primary;
+    border-radius: 1rem;
+    box-shadow: 0 .5rem 1rem 0 rgba($cl-black, .2);
+    transition: transform 400ms, background-color 400ms;
+  }
+
+  p {
+    z-index: 2;
+    position: relative;
+    margin: 0 2rem 3rem;
+    font-size: 1.6rem;
+    font-weight: 300;
+
+    @include media($screen-md) {
+      font-size: 1.8rem;
+    }
+  }
+}
+
+.faq__toggle {
+  opacity: 0;
+  z-index: 2;
+  position: absolute;
+
+  &:checked {
+
+    + .faq__label {
+      color: $cl-primary;
+
+      .faq__icon {
+        transform: rotate(180deg);
+
+        path {
+          fill: $cl-primary;
+        }
+      }
+    }
+
+    ~ .faq__content {
+      max-height: 100rem;
+      color: $cl-black;
+      transition-duration: 400ms, 800ms;
+      transition-timing-function: ease-in-out;
+
+      &:after {
+        background-color: $cl-white;
+        transform: scale(1.05);
+      }
+    }
+  }
+
+  &:focus {
+
+    + .faq__label {
+      text-decoration: underline;
+    }
+  }
+}
+
+.faq__label {
+  z-index: 2;
+  position: relative;
+  display: block;
+  padding: 3rem 2rem;
+  width: 100%;
+  color: $cl-white;
+  font-weight: 600;
+  cursor: pointer;
+  user-select: none;
+  transition: color 500ms;
+}
+
+
+.faq__icon {
+  position: absolute;
+  top: calc(50% - 1.2rem);
+  right: 2rem;
+  width: 2.4rem;
+  height: 2.4rem;
+  transition: transform 400ms;
+
+  path {
+    fill: $cl-white;
+    transition: fill 400ms;
+  }
 }
